# task_Solana_2026

./: README.md
kozatsky_biznes/: Anchor.toml
kozatsky_biznes/programs/crafting/: Cargo.toml
kozatsky_biznes/programs/crafting/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/crafting/src/instructions/: craft_item.rs  initialize_crafting_authority.rs
kozatsky_biznes/programs/item_nft/: Cargo.toml
kozatsky_biznes/programs/item_nft/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/item_nft/src/instructions/: burn_nft_item.rs  initialize_config.rs  mint_nft_item.rs
kozatsky_biznes/programs/kozatsky_biznes/: Cargo.toml
kozatsky_biznes/programs/kozatsky_biznes/src/: lib.rs
kozatsky_biznes/programs/kozatsky_biznes/tests/: test_initialize.rs
kozatsky_biznes/programs/magic_token/: Cargo.toml
kozatsky_biznes/programs/magic_token/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/magic_token/src/instructions/: initialize.rs  mint_magic_token.rs
kozatsky_biznes/programs/marketplace/: Cargo.toml
kozatsky_biznes/programs/marketplace/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/marketplace/src/instructions/: initialize_marketplace_authority.rs  sell_item.rs
kozatsky_biznes/programs/resource_manager/: Cargo.toml
kozatsky_biznes/programs/resource_manager/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/resource_manager/src/instructions/: burn_resource.rs  create_resource_mint.rs  initialize_game.rs  mint_resource.rs
kozatsky_biznes/programs/search/: Cargo.toml
kozatsky_biznes/programs/search/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
kozatsky_biznes/programs/search/src/instructions/: initialize_player.rs  initialize_search_authority.rs  search_resources.rs
kozatsky_biznes/scripts/: deploy.ts  test-game.ts
