[package]
name = "item_nft"
version = "0.1.0"
description = "Item NFT program for Kozatsky Biznes — manages item NFTs as Token-2022 tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "item_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token_2022", "token_2022_extensions", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
