[package]
name = "magic_token"
version = "0.1.0"
description = "Magic Token program for Kozatsky Biznes — manages MagicToken SPL Token-2022 mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token_2022", "token_2022_extensions", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }