[package]
name = "marketplace"
version = "0.1.0"
description = "Marketplace program for Kozatsky Biznes — sell item NFTs for MagicToken"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token_2022", "token_2022_extensions", "associated_token"] }
resource_manager = { path = "../resource_manager", features = ["cpi"] }
item_nft = { path = "../item_nft", features = ["cpi"] }
magic_token = { path = "../magic_token", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
